
ctags-@VERSION@ (@DATE@)
* Added support for Pyrex/Cython declarations [Python].
* Added support for "v" kind for variables [Python].
* Added support for new language: VHDL, contributed by Nicolas Vincent [VHDL, Bug #1943306].
* Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
* Added support for class and member variables [PHP, Bug #1037086].
* Fixed detection of triple strings inside other strings [Python, Bug #1988130].
* Fixed an endless loop with comments in triple strings [Python, Bug #1988027].
* Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].
* Fixed parsing of method parameter annotations, fix contributed by Paolo "blaisorblade" Giarrusso [Java, Bug #2049723, #2117073].
* Fixed parsing of global scope qualifiers in base class lists [C++, Bug #1799343].
* Fixed bug where namespace members were given kinds corresponding to globals [C++, Bug #1924919, #1575055].
* Fixed parsing of "else" [C#, Bug #1830344].
* Fixed parsing of derived enums [C#, Bug #1515910].
* Fixed parsing of "foreach" [C#, Bug #1830343].
* Fixed parsing of simple generic classes [C#, Bug #1515910].
* Fixed bug with detecting identifiers inside variables [Python, Bug #1809024].
* Fixed bug with detecting identifiers at the start of variables [Python, Bug #1856363].
* Fixed parsing of triple single-quoted multi-line strings [Python, Bug #1906062].

ctags-5.7 (04 Sep 2007)
* Added support for DIM AS [Freebasic, Bug #1741778].
* Added support for arbitrary nesting depth [Python, Bug #1684786, Debian bug #409078].
* Added support for verbatim string literals [C#, Bug #1515910].
* Added support for .ctags as well as ctags.cnf on Windows [Bug #1246506].
* Added support for non-extern, non-static functions returning wchar_t, contributed by Aaron Peromsik [C++, Patch #1458930].
* Added support for numerous revision control systems including Bazaar and Mercurial [Bug #1472894].